# murmur

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
assets/js/: htmx-ws.js  main.js  processor.js
assets/styles/: styles.css
src/: audio.rs  main.rs  routes.rs  state.rs
stt/: Cargo.toml
stt/src/: lib.rs  main.rs
templates/: index.html  layout.html  sample.html
